--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
-    "symfony/console": "2.*"
+    "symfony/console": "2.*",
+    "goodby/csv": "1.0.*"
   },
   "autoload": {
     "psr-0": {
