--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "symfony/console": "2.*",
     "goodby/csv": "1.0.*",
-    "twilio/sdk": "3.10.*"
+    "twilio/sdk": "3.10.*",
+    "symfony/yaml": "2.2.*"
   },
   "autoload": {
     "psr-0": {
