--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,18 @@
 {
-  "require": {
-    "symfony/console": "2.*",
-    "goodby/csv": "1.0.*",
-    "twilio/sdk": "3.10.*",
-    "symfony/yaml": "2.2.*"
-  },
-  "autoload": {
-    "psr-0": {
-        "Asphxia\\Batchio": "src/"
+    "name": "asphxia/batchio",
+    "description": "Batch processing for Twilio services",
+    "require": {
+        "php": ">=5.4"
+    },
+    "require": {
+        "symfony/console": "2.*",
+        "goodby/csv": "1.0.*",
+        "twilio/sdk": "3.10.*",
+        "symfony/yaml": "2.2.*"
+    },
+    "autoload": {
+        "psr-0": {
+            "Asphxia\\Batchio": "src/"
+        }
     }
-  }
 }
